# lvgl_desktop_smart_box

./: CMakeLists.txt  sdkconfig
components/lvgl/: CMakeLists.txt  lv_conf.h
components/lvgl/src/core/: lv_event.c  lv_obj.c  lv_obj_class.c  lv_obj_pos.c  lv_obj_tree.c  lv_refr.c
components/lvgl/src/extra/others/gridnav/: lv_gridnav.c
components/lvgl/src/misc/: lv_mem.c  lv_timer.c
components/lvgl/src/widgets/: lv_label.c
main/: CMakeLists.txt  Kconfig.projbuild  app_main.c  app_main.h  gpio_key.h  idf_component.yml  update_ui.c  update_ui.h
main/dbg_test/: dbg_test.h
main/linkkit_mqtt/: linkkit_mqtt.c  linkkit_mqtt.h
main/lv_port/: lv_port_disp.c  lv_port_indev.c  lv_port_indev.h
main/network_moni/: network_moni.c  network_moni.h
main/sntp_sync/: sntp_sync.c  sntp_sync.h
main/ui/: ui.c  ui.h
